[package]
name = "minimal-smoo-server"
version = "0.1.0"
authors = ["Jack Baron <jackmbaron@gmail.com>"]
description = "Minimal Super Mario Odyssey Online Server"
edition = "2021"
rust-version = "1.62"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
color-eyre = "0.6.2"
derive-getters = "0.2.0"
once_cell = "1.13.0"
serde = { version = "1.0.142", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.36"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
