[package]
name = "minimal-smoo-server"
version = "0.1.0"
authors = ["Jack Baron <jackmbaron@gmail.com>"]
description = "Minimal Super Mario Odyssey Online Server"
edition = "2021"
rust-version = "1.64"

[dependencies]
bytes = "1.2.1"
clap = { version = "4.0.17", features = ["derive"] }
color-eyre = "0.6.2"
glam = "0.21.3"
once_cell = "1.15.0"
paste = "1.0.9"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
smoo-derive = { path = "./smoo-derive" }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.24"
flume = "0.10.14"
serde_json = "1.0.86"
rustyline = "10.0.0"

[profile.release]
debug = 1
